[package]
name = "openapiv3-test"
version = "0.1.0"
authors = ["Adam H. Leventhal <ahl@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapiv3 = { path = "../openapiv3" }
rayon = "1.5.1"
semver = "1.0.4"
serde = "1.0.130"
serde_json = "1.0.67"
serde_yaml = "0.8.20"
walkdir = "2.3.2"
